# QRCodeGeneratorApp

./: .env.example  .gitignore  QRGenerator.spec  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qrgenerator/: config.py  main.py  main_window.py  qr_service.py  vcard_service.py
tests/: test_config.py  test_main_window.py  test_qr_service.py  test_vcard_service.py
