[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrgenerator"
version = "0.1.0"
description = "A PySide6 desktop QR code generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "qrcode[pil]>=8.0",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.6",
]

[project.scripts]
qrgenerator = "qrgenerator.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

